# advent-of-code-2024

./: README.md  cabal.project
day1/: Helpers.hs  Helpers_test.hs  Main.hs  day1.cabal
day2/: Helpers.hs  Helpers_test.hs  Main.hs  day2.cabal
day3/: Main.hs  day3.cabal
day4/: Main.hs  day4.cabal
day5/: Main.hs  day5.cabal
day6/: Main.hs  day6.cabal
day7/: Main.hs  day7.cabal
day8/: Main.hs  day8.cabal
day9/: Main.hs  day9.cabal
shared-lib/: Lib.hs  shared-lib.cabal
