cabal-version:      2.4
name:               day2
version:            0.1.0.0

library
    exposed-modules:  Helpers
    build-depends:    base
    default-language: Haskell2010

executable day2
    main-is:          Main.hs
    build-depends:    base
    default-language: Haskell2010
    other-modules:    Helpers

test-suite day2_test
    type:             exitcode-stdio-1.0
    main-is:          Helpers_test.hs
    build-depends:    base, HUnit, day2
    default-language: Haskell2010
    other-modules:    Helpers
